<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/framelayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_radial"
    tools:context=".VariloidActivity" >

    <RelativeLayout
        android:id="@+id/relativelayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:gravity="center" >

        <TextView
            android:id="@+id/titulo"
            style="@style/TextAppearance.Sherlock.Widget.ActionBar.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:shadowColor="@color/text_shadow"
            android:shadowDx="-3"
            android:shadowDy="-3"
            android:shadowRadius="1"
            android:text="@string/app_name"
            android:textColor="@color/light_font"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/subtitulo"
            style="@style/TextAppearance.Sherlock.Widget.ActionBar.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/titulo"
            android:gravity="center_horizontal"
            android:shadowColor="@color/text_shadow"
            android:shadowDx="-1"
            android:shadowDy="-1"
            android:shadowRadius="1"
            android:text="@string/subtitulo_loading"
            android:textColor="#000000"
            android:layout_marginBottom="20dp"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/nome_aulixiar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/subtitulo"
            android:layout_margin="10dp" />
        
        <Button
            android:id="@+id/button_logar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/nome_aulixiar"
            android:layout_margin="10dp"
            android:text="@string/btn_logar"
            android:textAppearance="@style/TextAppearance.Sherlock.Widget.ActionBar.Title" />
    </RelativeLayout>
    
    <Button
            android:id="@+id/button_reloader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="50dp"
            android:layout_gravity="center"
            android:visibility="gone"
            android:text="@string/btn_reloader"
            android:textAppearance="@style/TextAppearance.Sherlock.Widget.ActionBar.Title" />

</FrameLayout>